Fix white overflow issue on mobile

--- a/framework/src/components/SocialProof/SocialProof.module.css
+++ b/framework/src/components/SocialProof/SocialProof.module.css
@@ -1,3 +1,7 @@
+.container {
+  overflow-x: hidden;
+}
+
 .image {
   height: 50px;
   max-width: 70%;
